[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/unreal_behavior_tree/behavior_tree_editor/behavior_graph_node/attachment_info.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="AttachmentInfo" type="PanelContainer"]
margin_right = 21.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseButton" type="Button" parent="."]
margin_right = 21.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 21.0
margin_bottom = 30.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="HBoxContainer"]
margin_top = 8.0
margin_bottom = 22.0
size_flags_horizontal = 3
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 21.0
margin_bottom = 30.0
hint_tooltip = "Remove the attachment"
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BaseButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
